projects/windesco/portal-taskorder2/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windesco-dev-svc
  namespace: windesco-dev
spec:
  selector:
    app: windesco-dev
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
