projects/windesco/portal-taskorder2/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windesco-dev
  namespace: windesco-dev
  labels:
    app: windesco-dev
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - windesco-dev-t2.coherent.in
      secretName: windesco-dev-tls
  rules:
    - host: "windesco-dev-t2.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: windesco-dev-svc
                port:
                  number: 5000
